--- a/curso.html
+++ b/curso.html
@@ -33,29 +33,11 @@
             </a>
         </nav>
     </header>
-    <main class="toldo" id="toldo">
-        <div>
-            <ol>
+    <main>
+        <section>
+            
 
-                <li><h2><a href="#r1">Pergunta 1</a></h2></li>
-                <li><h2><a href="#r2">Pergunta 2</a></h2></li>
-                <li><h2><a href="#r3">Pergunta 3</a></h2></li>
-                <li><h2><a href="#r4">Pergunta 4</a></h2></li>
-                <li><h2><a href="#r5">Pergunta 5</a></h2></li>
-
-            </ol>
-        </div>
-
-        <p id="r1">Resposta 1</p>
-        <a href="#toldo">Voltar</a>
-        <p id="r2">Resposta 2</p>
-        <a href="#toldo">Voltar</a>
-        <p id="r3">Resposta 3</p>
-        <a href="#toldo">Voltar</a>
-        <p id="r4">Resposta 4</p>
-        <a href="#toldo">Voltar</a>
-        <p id="r5">Resposta 5</p>
-        <a href="#toldo">Voltar</a>
+        </section>
     </main>
 
     <footer>
