--- a/contato.html
+++ b/contato.html
@@ -15,10 +15,13 @@
         </section>
         <nav>
             <a href="index.html">
-                <h1>Início</h1>
+                <h1>
+                    Início
+                </h1>
             </a>
-
-            <h1>Curso</h1>
+            <a href="curso.html">
+                <h1>Curso</h1>
+            </a>
             <a href="faq.html">
                 <h1>
                     FAQ
