--- a/curso.html
+++ b/curso.html
@@ -20,7 +20,9 @@
                     Início
                 </h1>
             </a>
-            <h1>Curso</h1>
+            <a href="curso.html">
+                <h1>Curso</h1>
+            </a>
             <a href="faq.html">
                 <h1>
                     FAQ
@@ -33,11 +35,99 @@
             </a>
         </nav>
     </header>
-    <main>
-        <section>
-            
+    <main class="curso">
+        <h1>Curso</h1>
+        <table>
+            <tr>
+                <th>Área</th>
+                <th>Ano</th>
+                <th>Disciplina</th>
+                <th>1a Série</th>
+                <th>2a Série</th>
+                <th>3a Série</th>
+            </tr>
+            <tr>
+                <th colspan="6">PARTE ESPECÍFICA</th>
+            </tr>
+            <tr>
+                <th rowspan="11">Técnica</th>
+                <th rowspan="3">1o ano</th>
+                <td class="materia">Banco de Dados</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td class="materia">Fundamentos de Informática</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td class="materia">Programação I</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <th rowspan="4">2o ano</th>
+                <td class="materia">Aplicações Web I</td>
+                <td>0</td>
+                <td>4</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td class="materia">Estrutura de Dados</td>
+                <td>0</td>
+                <td>4</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td class="materia">Programação II</td>
+                <td>0</td>
+                <td>4</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td class="materia">Redes de Computadores</td>
+                <td>0</td>
+                <td>2</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <th rowspan="4">3o ano</th>
+                <td class="materia">Aplicações Web II</td>
+                <td>0</td>
+                <td>0</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td class="materia">Aplicações Móveis</td>
+                <td>0</td>
+                <td>0</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td class="materia">Engenharia de Software</td>
+                <td>0</td>
+                <td>0</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td class="materia">Montagem e Manutenção de Computadores</td>
+                <td>0</td>
+                <td>0</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <th colspan="3">Total</th>
+                <th>8</th>
+                <th>12</th>
+                <th>16</th>
+            </tr>
+        </table>
 
-        </section>
+
     </main>
 
     <footer>
