--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,9 @@
                     Início
                 </h1>
             </a>
-            <h1>Curso</h1>
+            <a href="curso.html">
+                <h1>Curso</h1>
+            </a>
             <a href="faq.html">
                 <h1>
                     FAQ
