--- a/index.html
+++ b/index.html
@@ -53,19 +53,23 @@
                 Campo de Atuação
             </h1>
 
-            <h2>I. Desenvolvimento e manutenção de Programas Aplicativos e Sistemas Operacionais;</h2>
-            <h2>II. Montagem, instalação e manutenção de equipamentos, bem como a administração e manutenção de Redes de
-                Informática, atentando para a atualização, tendo em vista as rápidas mudanças da tecnologia;</h2>
-            <h2>III. Analise e operação de serviços e funções de sistemas operacionais;</h2>
-            <h2>IV. Organização, coleta e documentação de informações sobre o desenvolvimento de projetos;</h2>
-            <h2>V. Avaliação e especificação de necessidades de treinamento e de suporte técnico aos usuários</h2>
+            <ol type="I">
+                <li> Desenvolvimento e manutenção de Programas Aplicativos e Sistemas Operacionais;</li>
+                <li> Montagem, instalação e manutenção de equipamentos, bem como a administração e manutenção de Redes
+                    de Informática, atentando para a atualização, tendo em vista as rápidas mudanças da tecnologia;</li>
+                <li> Analise e operação de serviços e funções de sistemas operacionais;</li>
+                <li> Organização, coleta e documentação de informações sobre o desenvolvimento de projetos;</li>
+                <li> Avaliação e especificação de necessidades de treinamento e de suporte técnico aos usuários;</li>
+            </ol>
 
             <h1>
                 Modalidades
             </h1>
-            <h2>
-                Integrado, em 3 anos - Diurno
-            </h2>
+            <ul type="square">
+
+                <li>Integrado, em 3 anos - Diurno</li>
+
+            </ul>
 
         </section>
     </main>
